--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
     "jsx": "react-jsx"
   },
   "include": [
-    "src"
-  ]
+    "src", "src/custom.d.ts"
+  ],
+  "plugins": [{ "name": "typescript-plugin-css-modules" }]
 }
